[package]
name = "owo"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["std", "help", "usage", "suggestions"] }
ignore = "0.4.25"
num_cpus = "1.17.0"
regex = "1.12.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
